attempted implementation of search functionality

--- a/elements.html
+++ b/elements.html
@@ -541,6 +541,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
+			<script src="assets/js/search.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
