--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 
 							<!-- Search -->
 								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="search" name="query" id="query" placeholder="Search" />
+									<form onsubmit="search()">
+										<input type="search" name="query" id="query" placeholder="Search On This Page" />
 									</form>
 								</section>
 
