Added contact information

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 											</h1>
 											<p>UNL COMPUTING FOR ALL</p>
 										</header>
-										<p>This website is a collection of knowledge and resources for everyone the tech community, collected and curated by UNL Computing For All. On the left, check out links for popular categories of resources, and scroll down to learn more about our executive team.</p>
+										<p>This website is a collection of knowledge and resources for everyone the tech community, collected and curated by UNL Computing For All. On the left, check out links for popular categories of resources, and scroll down to find quick, popular resources.</p>
 										<p>UNL Computing for All is a recognized student organization at the University of Nebraska-Lincoln to promote diversity in STEM fields.</p>
+										<p>If you have anything you would like to add to this site, you're in luck! The Computing for All Resource Space is an open source project and anyone can contribute to it.</p>
 										<ul class="actions">
 											<li><a href="https://acm-w.unl.edu/computing-all-acm-w-chapter" class="button big">Learn More</a></li>
 										</ul>
@@ -226,12 +227,11 @@
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>Reach out to us!</p>
 									<ul class="contact">
-										<li class="fa-envelope-o"><a href="#">information@untitled.tld</a></li>
-										<li class="fa-phone">(000) 000-0000</li>
-										<li class="fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="fa-envelope-o"><a href="#">unl.computingforall@gmail.com</a></li>
+										<li class="fa-home">Meetings: Thursdays from 7-8 PM in Avery Hall
+										</li>
 									</ul>
 								</section>
 
