--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>CFA Resource Space</title>
+		<title>CFA Resource Hub</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -38,7 +38,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Resource Space<br />
+											<h1>Resource Hub<br />
 											</h1>
 											<p>UNL COMPUTING FOR ALL</p>
 										</header>
@@ -149,6 +149,29 @@
 									</div>
 								</section>
 
+								<section>
+									<form method="POST" action="https://formspree.io/mustangg66@gmail.com">
+										<div class="row-uniform">
+											<div class="6u 12u$(xsmall)">
+												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+											</div>
+											<div class="6u$ 12u$(xsmall)">
+												<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
+											</div>
+										</div>
+										<div class="12u$">
+											<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+										</div>
+									
+										<div class="12u$">
+											<ul class="actions">
+												<li><input type="submit" value="Send Message" class="special" /></li>
+												<li><input type="reset" value="Reset" /></li>
+											</ul>
+										</div>
+									  </form>
+								</section>
+
 						</div>
 					</div>
 
@@ -169,20 +192,22 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="generic.html">Beginner</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Interviews</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="#">Behavioral Interviews</a></li>
+												<li><a href="#">Technical Interviews</a></li>
+												<li><a href="#">PM Interviews</a></li>
+												<li><a href="#">Interview Tips</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
+										<li><a href="#">Front-End</a></li>
+										<li><a href="#">Back-End</a></li>
+										<li><a href="#">Graphic Design</a></li>
+										<li><a href="#">Workplace</a></li>
+
 										<li>
 											<span class="opener">Another Submenu</span>
 											<ul>
@@ -249,6 +274,7 @@
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
+			<script src="assets/js/search.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
