added thank you page

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 									</div>
 								</section>
 
+								<!-- Send us feedback -->
 								<section>
 									<form method="POST" action="https://formspree.io/mustangg66@gmail.com">
 										<div class="row-uniform">
@@ -169,6 +170,7 @@
 												<li><input type="reset" value="Reset" /></li>
 											</ul>
 										</div>
+										<input type="hidden" name="_next" value="thanks.html" />
 									  </form>
 								</section>
 
@@ -184,6 +186,8 @@
 									<form onsubmit="search()">
 										<input type="search" name="query" id="query" placeholder="Search On This Page" />
 									</form>
+
+									
 								</section>
 
 							<!-- Menu -->
