--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
 							<!-- Header -->
 								<header id="header">
 									<ul class="icons">
+										<!--
 										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										-->
 										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<!--
 										<li><a href="#" class="icon fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon fa-medium"><span class="label">Medium</span></a></li>
+										-->
 									</ul>
 								</header>
 
@@ -93,63 +97,106 @@
 								>
 
 							<!-- Section -->
+							<section>
+								<header class="major">
+									<h2>Interview Prep Guides</h2>
+								</header>
+								<div class="posts">
+									<article>
+										<a href="https://drive.google.com/open?id=1IIylDwM1RlGoVc45dFo945XyHY4re0BAFNLCnHAXDdo" target="_blank" class="image"><img src="images/resume.png" alt="Resume Photo" /></a>
+										<h3>Fixing Up Your Resume and Applying</h3>
+										<p>Learn how to apply for an internship/full time job, get valuable resume tips, and see sample resumes from students who have interned both at Nebraska companies and large tech companies like Microsoft, Facebook, Google, and Amazon.</p>
+										<ul class="actions">
+											<li><a href="https://drive.google.com/open?id=1IIylDwM1RlGoVc45dFo945XyHY4re0BAFNLCnHAXDdo" target="_blank" class="button">More</a></li>
+										</ul>
+									</article>
+									<article>
+										<a href="https://docs.google.com/document/d/1kP2eRusMjAs3RAnE9m-RHiIdROS83SVtw5nPgR0zT6I/edit?usp=sharing"  target="_blank"class="image"><img src="images/behavioral.png" alt="" /></a>
+										<h3>Behavioral Interviews</h3>
+										<p>Learn how to ace a phone or non-technical interview, rock the elevator pitch, and be confident the whole way.</p>
+										<ul class="actions">
+											<li><a href="https://docs.google.com/document/d/1kP2eRusMjAs3RAnE9m-RHiIdROS83SVtw5nPgR0zT6I/edit?usp=sharing" target="_blank" class="button">More</a></li>
+										</ul>
+									</article>
+									<article>
+										<a href="https://docs.google.com/document/d/14JDrWAk2ToeQ_YbH--91_SMhonRWFNsjZXQniTVcN_c/edit?usp=sharing" target="_blank" class="image"><img src="images/whiteboard1.png" alt="whiteboard image 1" /></a>
+										<h3>Technical Interviews, Part I</h3>
+										<p>Resources, tips, and tricks for practicing and solving technical interview questions and impressing your interviewer with your technical expertise. Includes review of arrays, strings, linked lists, and big O-notation.</p>
+										<ul class="actions">
+											<li><a href="https://docs.google.com/document/d/14JDrWAk2ToeQ_YbH--91_SMhonRWFNsjZXQniTVcN_c/edit?usp=sharing" target="_blank" class="button">More</a></li>
+										</ul>
+									</article>
+									<article>
+										<a href="https://docs.google.com/document/d/1JMmHJ07ZK5livzRCtv6JmDLygKEIMaSzKFjj3AFpElw/edit?usp=sharing" target="_blank"class="image"><img src="images/whiteboard2.png" alt="technical interviews part 2" /></a>
+										<h3>Technical Interviews, Part II</h3>
+										<p>Resources, tips and tricks for practicing and solving technical interview questions and impressing your interviewer with your technical expertise. Includes review of stacks, queues, searching, and sorting. </p>
+										<ul class="actions">
+											<li><a href="https://docs.google.com/document/d/1JMmHJ07ZK5livzRCtv6JmDLygKEIMaSzKFjj3AFpElw/edit?usp=sharing" target="_blank" class="button">More</a></li>
+										</ul>
+									</article>
+								</div>
+							</section>
+
+							<!-- Section -->
 								<section>
 									<header class="major">
 										<h2>Quick Links</h2>
 									</header>
 									<div class="posts">
 										<article>
-											<a href="https://www.amazon.com/Cracking-Coding-Interview-Programming-Questions/dp/0984782850/ref=asap_bc?ie=UTF8" class="image"><img src="images/ctci.jpg" alt="Cracking the Coding Interview Photo" /></a>
+											<a href="https://www.amazon.com/Cracking-Coding-Interview-Programming-Questions/dp/0984782850/ref=asap_bc?ie=UTF8" target="_blank" class="image"><img src="images/ctci.jpg" alt="Cracking the Coding Interview Photo" /></a>
 											<h3>Cracking the Coding Interview</h3>
 											<p>The most famous and widely used resource for preparing for programming interviews. Many companies get their interview questions directly from this book!</p>
 											<ul class="actions">
-												<li><a href="#https://www.amazon.com/Cracking-Coding-Interview-Programming-Questions/dp/0984782850/ref=asap_bc?ie=UTF8" class="button">More</a></li>
+												<li><a href="#https://www.amazon.com/Cracking-Coding-Interview-Programming-Questions/dp/0984782850/ref=asap_bc?ie=UTF8" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://www.inhersight.com/" class="image"><img src="images/inhersight.jpg" alt="" /></a>
+											<a href="https://www.inhersight.com/" target="_blank" class="image"><img src="images/inhersight.jpg" alt="" /></a>
 											<h3>InHerSight</h3>
 											<p>A website similar to Glassdoor to help women find jobs with fair benefits, compensation, and good culture.</p>
 											<ul class="actions">
-												<li><a href="https://www.inhersight.com/" class="button">More</a></li>
+												<li><a href="https://www.inhersight.com/" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://diversity.unl.edu/" class="image"><img src="images/diversity-unl.PNG" alt="diversity at UNL" /></a>
+											<a href="https://diversity.unl.edu/" target="_blank" class="image"><img src="images/diversity-unl.PNG" alt="diversity at UNL" /></a>
 											<h3>Diversity at UNL</h3>
 											<p>Learn more about what the University of Nebraska-Lincoln is doing to promote diversity on campus and find resources and statistics.</p>
 											<ul class="actions">
-												<li><a href="https://diversity.unl.edu/" class="button">More</a></li>
+												<li><a href="https://diversity.unl.edu/" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://www.amazon.com/dp/B00ISYMUR6/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1" class="image"><img src="images/ctpmi.png" alt="Amazon link to Cracking the PM Interview" /></a>
+											<a href="https://www.amazon.com/dp/B00ISYMUR6/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1" target="_blank" class="image"><img src="images/ctpmi.png" alt="Amazon link to Cracking the PM Interview" /></a>
 											<h3>Cracking the PM Interview</h3>
 											<p>Interested in becoming a Product/Program/Project Manager in your tech career? Check out the PM companion to Cracking the Coding Interview, featuring the best tips and sample questions for PM interviews.</p>
 											<ul class="actions">
-												<li><a href="https://www.amazon.com/dp/B00ISYMUR6/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1" class="button">More</a></li>
+												<li><a href="https://www.amazon.com/dp/B00ISYMUR6/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://www.hackerrank.com/" class="image"><img src="images/hackerrank.png" alt="" /></a>
+											<a href="https://www.hackerrank.com/" target="_blank" class="image"><img src="images/hackerrank.png" alt="" /></a>
 											<h3>HackerRank</h3>
 											<p>This is a website to practice your interviewing skills by participating in coding challenges and competitions.</p>
 											<ul class="actions">
-												<li><a href="https://www.hackerrank.com/" class="button">More</a></li>
+												<li><a href="https://www.hackerrank.com/" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://projecteuler.net/" class="image"><img src="images/projecteuler2.png" alt="" /></a>
+											<a href="https://projecteuler.net/" target="_blank" class="image"><img src="images/projecteuler2.png" alt="" /></a>
 											<h3>Project Euler</h3>
 											<p>A website to practice solving math problems and logic puzzles using programming.</p>
 											<ul class="actions">
-												<li><a href="https://projecteuler.net/" class="button">More</a></li>
+												<li><a href="https://projecteuler.net/" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
 									</div>
 								</section>
 
+								
 								<!-- Send us feedback -->
+								<!--
 								<section>
 									<form method="POST" action="https://formspree.io/mustangg66@gmail.com">
 										<div class="row-uniform">
@@ -173,6 +220,7 @@
 										<input type="hidden" name="_next" value="thanks.html" />
 									  </form>
 								</section>
+							-->
 
 						</div>
 					</div>
@@ -181,20 +229,12 @@
 					<div id="sidebar">
 						<div class="inner">
 
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form onsubmit="search()">
-										<input type="search" name="query" id="query" placeholder="Search On This Page" />
-									</form>
-
-									
-								</section>
-
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
 										<h2>Menu</h2>
 									</header>
+									<!--
 									<ul>
 										<li><a href="index.html">Home</a></li>
 										<li><a href="generic.html">Beginner</a></li>
@@ -225,9 +265,11 @@
 										<li><a href="#">Sapien Mauris</a></li>
 										<li><a href="#">Amet Lacinia</a></li>
 									</ul>
+								-->
 								</nav>
 
 							<!-- Section -->
+							<!--
 								<section>
 									<header class="major">
 										<h2>Ante interdum</h2>
@@ -250,6 +292,7 @@
 										<li><a href="#" class="button">More</a></li>
 									</ul>
 								</section>
+							-->
 
 							<!-- Section -->
 								<section>
