--- a/index.html
+++ b/index.html
@@ -103,35 +103,35 @@
 								</header>
 								<div class="posts">
 									<article>
-										<a href="https://drive.google.com/open?id=1IIylDwM1RlGoVc45dFo945XyHY4re0BAFNLCnHAXDdo" target="_blank" class="image"><img src="images/resume.png" alt="Resume Photo" /></a>
+										<a href="https://drive.google.com/open?id=1uoYt_LONi3tLsqYB5Axw8-K9vuEifPG9" target="_blank" class="image"><img src="images/resume.png" alt="Resume Photo" /></a>
 										<h3>Fixing Up Your Resume and Applying</h3>
 										<p>Learn how to apply for an internship/full time job, get valuable resume tips, and see sample resumes from students who have interned both at Nebraska companies and large tech companies like Microsoft, Facebook, Google, and Amazon.</p>
 										<ul class="actions">
-											<li><a href="https://drive.google.com/open?id=1IIylDwM1RlGoVc45dFo945XyHY4re0BAFNLCnHAXDdo" target="_blank" class="button">More</a></li>
+											<li><a href="https://drive.google.com/open?id=1uoYt_LONi3tLsqYB5Axw8-K9vuEifPG9" target="_blank" class="button">More</a></li>
 										</ul>
 									</article>
 									<article>
-										<a href="https://docs.google.com/document/d/1kP2eRusMjAs3RAnE9m-RHiIdROS83SVtw5nPgR0zT6I/edit?usp=sharing"  target="_blank"class="image"><img src="images/behavioral.png" alt="" /></a>
+										<a href="https://drive.google.com/open?id=1WlGWaBJw9jm4kQnqCLd0UbKE53JYcRi9"  target="_blank"class="image"><img src="images/behavioral.png" alt="" /></a>
 										<h3>Behavioral Interviews</h3>
 										<p>Learn how to ace a phone or non-technical interview, rock the elevator pitch, and be confident the whole way.</p>
 										<ul class="actions">
-											<li><a href="https://docs.google.com/document/d/1kP2eRusMjAs3RAnE9m-RHiIdROS83SVtw5nPgR0zT6I/edit?usp=sharing" target="_blank" class="button">More</a></li>
+											<li><a href="https://drive.google.com/open?id=1WlGWaBJw9jm4kQnqCLd0UbKE53JYcRi9" target="_blank" class="button">More</a></li>
 										</ul>
 									</article>
 									<article>
-										<a href="https://docs.google.com/document/d/14JDrWAk2ToeQ_YbH--91_SMhonRWFNsjZXQniTVcN_c/edit?usp=sharing" target="_blank" class="image"><img src="images/whiteboard1.png" alt="whiteboard image 1" /></a>
+										<a href="https://drive.google.com/open?id=1_vRiuEGubftEgt2PIfQTIZLajslTRJJC" target="_blank" class="image"><img src="images/whiteboard1.png" alt="whiteboard image 1" /></a>
 										<h3>Technical Interviews, Part I</h3>
 										<p>Resources, tips, and tricks for practicing and solving technical interview questions and impressing your interviewer with your technical expertise. Includes review of arrays, strings, linked lists, and big O-notation.</p>
 										<ul class="actions">
-											<li><a href="https://docs.google.com/document/d/14JDrWAk2ToeQ_YbH--91_SMhonRWFNsjZXQniTVcN_c/edit?usp=sharing" target="_blank" class="button">More</a></li>
+											<li><a href="https://drive.google.com/open?id=1_vRiuEGubftEgt2PIfQTIZLajslTRJJC" target="_blank" class="button">More</a></li>
 										</ul>
 									</article>
 									<article>
-										<a href="https://docs.google.com/document/d/1JMmHJ07ZK5livzRCtv6JmDLygKEIMaSzKFjj3AFpElw/edit?usp=sharing" target="_blank"class="image"><img src="images/whiteboard2.png" alt="technical interviews part 2" /></a>
+										<a href="https://drive.google.com/open?id=1KuTa9c6IJFQyr3XRygqR-xZXpkWYMbZr" target="_blank"class="image"><img src="images/whiteboard2.png" alt="technical interviews part 2" /></a>
 										<h3>Technical Interviews, Part II</h3>
 										<p>Resources, tips and tricks for practicing and solving technical interview questions and impressing your interviewer with your technical expertise. Includes review of stacks, queues, searching, and sorting. </p>
 										<ul class="actions">
-											<li><a href="https://docs.google.com/document/d/1JMmHJ07ZK5livzRCtv6JmDLygKEIMaSzKFjj3AFpElw/edit?usp=sharing" target="_blank" class="button">More</a></li>
+											<li><a href="https://drive.google.com/open?id=1KuTa9c6IJFQyr3XRygqR-xZXpkWYMbZr" target="_blank" class="button">More</a></li>
 										</ul>
 									</article>
 								</div>
