added emily's resources

--- a/index.html
+++ b/index.html
@@ -145,6 +145,14 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a href="https://docs.google.com/document/d/1P9C0Wz8PyXzgXLE70BkTx_yKRzGb-5VK6B5YXygY3fA/edit?usp=sharing" target="_blank"class="image"><img src="images/whiteboard2.png" alt="technical interviews part 2" /></a>
+											<h3>Resources for Defeating CS Stereotypes</h3>
+											<p> Resources compiled by Computing for All members on defeating stereotypes in computer science. </p>
+											<ul class="actions">
+												<li><a href="https://docs.google.com/document/d/1P9C0Wz8PyXzgXLE70BkTx_yKRzGb-5VK6B5YXygY3fA/edit?usp=sharing" target="_blank" class="button">More</a></li>
+											</ul>
+										</article>
+										<article>
 											<a href="https://www.amazon.com/Cracking-Coding-Interview-Programming-Questions/dp/0984782850/ref=asap_bc?ie=UTF8" target="_blank" class="image"><img src="images/ctci.jpg" alt="Cracking the Coding Interview Photo" /></a>
 											<h3>Cracking the Coding Interview</h3>
 											<p>The most famous and widely used resource for preparing for programming interviews. Many companies get their interview questions directly from this book!</p>
